--- a/diode/templates/sdfv.html
+++ b/diode/templates/sdfv.html
@@ -16,6 +16,7 @@
     <script src="{{dir|safe}}./webclient/renderer_elements.js"></script>
     <script src="{{dir|safe}}./webclient/context_menu.js"></script>
     <script src="{{dir|safe}}./webclient/sdfg_utils.js"></script>
+    <script src="{{dir|safe}}./webclient/overlay_manager.js"></script>
     <script src="{{dir|safe}}./webclient/renderer.js"></script>
 </head>
 <body>
